--- a/www/Kontrol-pkg-Kontrolsquid/Makefile
+++ b/www/Kontrol-pkg-Kontrolsquid/Makefile
@@ -1,15 +1,15 @@
 # $FreeBSD$
 
-PORTNAME=	Kontrol-pkg-Kontrolsquid
+PORTNAME=	Kontrol-pkg-KontrolSquid
 PORTVERSION=	0.1.10
-PORTREVISION= 4
+PORTREVISION=	5
 CATEGORIES=	www
 MASTER_SITES=	# empty
 DISTFILES=	# empty
 EXTRACT_ONLY=	# empty
 
 MAINTAINER=	contato@konntrol.com.br
-COMMENT=	Custom Kontrol Squid package
+COMMENT=	Kontrol Custom Squid Package
 
 LICENSE=	APACHE20
 
@@ -17,9 +17,8 @@ RUN_DEPENDS=	squid>=0:www/squid \
 		squid_radius_auth>=0:www/squid_radius_auth \
 		c-icap-modules>=0:www/c-icap-modules \
 		squidclamav>=0:www/squidclamav \
-		samba413>=0:net/samba413
-
-CONFLITS_WITH=	www/Kontrol-pkg-squid
+		samba410>=0:net/samba410 \
+		base64>=0:converters/base64
 
 NO_BUILD=	yes
 NO_MTREE=	yes
@@ -33,10 +32,10 @@ do-extract:
 do-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/pkg
 	${MKDIR} ${STAGEDIR}${PREFIX}/www/widgets/include
+	${MKDIR} ${STAGEDIR}${PREFIX}/www/shortcuts
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc
 	${MKDIR} ${STAGEDIR}/etc
 	${MKDIR} ${STAGEDIR}/root
-	${MKDIR} ${STAGEDIR}${PREFIX}/www/shortcuts
 	${MKDIR} ${STAGEDIR}/etc/inc/priv
 	${MKDIR} ${STAGEDIR}${PREFIX}/www/widgets/widgets
 	${MKDIR} ${STAGEDIR}${PREFIX}/www
@@ -101,11 +100,17 @@ do-install:
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/squid_log_parser.php \
 		${STAGEDIR}${PREFIX}/www
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/ad_remove.php \
-			${STAGEDIR}${PREFIX}/www
+		${STAGEDIR}${PREFIX}/www
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/ad_join.php \
 			${STAGEDIR}${PREFIX}/www
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/ad_transparent.php \
 			${STAGEDIR}${PREFIX}/www
+	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/head.inc \
+		${STAGEDIR}${PREFIX}/www
+	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/login2.php \
+		${STAGEDIR}${PREFIX}/www
+	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/www/new-konntrol-logo1.png \
+		${STAGEDIR}${PREFIX}/www
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/etc/smb4.conf \
 			${STAGEDIR}${PREFIX}/etc
 	${INSTALL_DATA} -m 0755 ${FILESDIR}${PREFIX}/etc/krb5.conf \
